--- a/cp2j.html
+++ b/cp2j.html
@@ -143,7 +143,7 @@
       </div>
     </div>
 
-  <a href="cp.html" >กลับหน้าร้าน</a> 
+  <a href="index.html" >กลับหน้าร้าน</a> 
       </div>
     </div>
 </div>
