--- a/cp2j.html
+++ b/cp2j.html
@@ -120,7 +120,7 @@
 
   <!-- แถบเมนู -->
   <div class="navbar">
-    <a href="miami.html">หน้าแรก</a>
+    <a href="index.html">หน้าแรก</a>
     <a href="https://maps.app.goo.gl/pxs57UR1BSQEJFa56" target="_blank">ที่ตั้งร้าน</a>
 
 <div class="dropdown">
@@ -143,7 +143,7 @@
       </div>
     </div>
 
-  <a href="index.html" >กลับหน้าร้าน</a> 
+  <a href="index.html">กลับหน้าร้าน</a> 
       </div>
     </div>
 </div>
