--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
   <!-- แถบเมนู -->
   <div class="navbar">
-    <a href="miami.html">หน้าแรก</a>
+    <a href="index.html">หน้าแรก</a>
     <a href="https://maps.app.goo.gl/pxs57UR1BSQEJFa56" target="_blank">ที่ตั้งร้าน</a>
 
 <div class="dropdown">
