--- a/index.html
+++ b/index.html
@@ -193,33 +193,32 @@
 <div style="max-width: 1000px; margin: 40px auto; padding: 20px; background: rgba(255,255,255,0.9); border: 2px solid #ccc; border-radius: 15px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
 
   <h2 style="text-align: center; margin-bottom: 20px;">วิดีโอบรรยากาศวันเปิดสินค้าล๊อตใหม่</h2>
+  <p style="width: 100%; margin-top: 10px;">✨เปิดสินค้าใหม่ทุกวัน เสาร์และโปรโมชั่น ถุงละ 100 ทุกวันจันทร์✨ </p>
 
-<p style="width: 100%; margin-top: 10px;">✨เปิดสินค้าใหม่ทุกวัน เสาร์และโปรโมชั่น ถุงละ 100 ทุกวันจันทร์✨ </p>
-<!-- วิดีโอขนาดเล็ก (thumbnail) -->
-<video class="thumbVideo" width="200" style="border-radius: 10px; cursor: pointer;" muted data-src="cp3.mp4">
-  <source src="cp3.mp4" type="video/mp4">
-</video>
-
-<video class="thumbVideo" width="200" style="border-radius: 10px; cursor: pointer;" muted data-src="cp4.mp4">
-  <source src="cp4.mp4" type="video/mp4">
-</video>
-
-
-
-<!-- กล่อง popup วิดีโอใหญ่ -->
-<div id="popup" style="
-  display: none;
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: rgba(0,0,0,0.7);
-  justify-content: center;
-  align-items: center;
-  z-index: 9999;
-">
-  <video id="popupVideo" controls autoplay style="max-width: 90%; border-radius: 10px;">
-    <source id="popupSource" src="" type="video/mp4">
+  <!-- วิดีโอขนาดเล็ก -->
+  <video class="thumbVideo" width="200" style="border-radius: 10px; cursor: pointer;" muted playsinline>
+    <source src="cp3.mp4" type="video/mp4">
   </video>
+
+  <video class="thumbVideo" width="200" style="border-radius: 10px; cursor: pointer;" muted playsinline>
+    <source src="cp4.mp4" type="video/mp4">
+  </video>
+
+  <!-- กล่อง popup -->
+  <div id="popup" style="
+    display: none;
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.7);
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  ">
+    <video id="popupVideo" controls autoplay muted playsinline style="max-width: 90%; border-radius: 10px;">
+      <source id="popupSource" src="" type="video/mp4">
+    </video>
+  </div>
 </div>
 
 <script>
@@ -227,18 +226,16 @@
   const popupVideo = document.getElementById('popupVideo');
   const popupSource = document.getElementById('popupSource');
 
-  // เลือกทุก video ที่มี class="thumbVideo"
   document.querySelectorAll('.thumbVideo').forEach(video => {
     video.addEventListener('click', function () {
-      const videoSrc = this.getAttribute('data-src');
+      const videoSrc = this.querySelector('source').src;
       popupSource.src = videoSrc;
-      popupVideo.load(); // โหลด source ใหม่
+      popupVideo.load();
       popup.style.display = 'flex';
-      popupVideo.play(); // เล่นอัตโนมัติ
+      popupVideo.play();
     });
   });
 
-  // ปิด popup เมื่อคลิกพื้นหลัง
   popup.onclick = function (e) {
     if (e.target.id === 'popup') {
       popup.style.display = 'none';
@@ -246,7 +243,6 @@
     }
   };
 </script>
-
 
   <!-- Modal สำหรับขยายรูป -->
   <div id="imgModal" class="modal" onclick="closeModal()">
