--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <source src="cp3.mp4" type="video/mp4">
   </video>
 
-  <video class="thumbVideo" width="200" style="border-radius: 10px; cursor: pointer;" muted playsinline>
+  <video class="thumbVideo" width="200" style="border-radius: 10px; cursor: pointer;" muted playsinline poster='cp10.jpg">
     <source src="cp4.mp4" type="video/mp4">
   </video>
 
