--- a/index.html
+++ b/index.html
@@ -114,6 +114,14 @@
       font-weight: bold;
       cursor: pointer;
     }
+
+  @media (max-width : 768px ){
+    button {
+      font-size: 18px;
+      padding:14px  28px;
+      }
+    }
+    
   </style>
 </head>
 <body>
