--- a/index.html
+++ b/index.html
@@ -120,7 +120,11 @@
       font-size: 18px;
       padding:14px  28px;
       }
-    }
+
+    button:active{
+      transform: scale(0.98);
+      background-color: #ddd;
+    } 
     
   </style>
 </head>
