--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 <div class="content" style="display: flex; justify-content: center; padding: 20px;">
   <div class="product" style="text-align: center; display: flex; flex-wrap: wrap; gap: 20px; max-width: 1000px; background: rgba(255, 255, 255, 0.9); border-radius: 10px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); padding: 20px;">
     <h1 style="width: 100%; text-align: center; margin: 0; line-height:1;">ร้าน CHANGPONG TRIBE</h1>
-    <p1 style="width: 100%; text-align: center; margin: 0;"></p1>
+    <p1 style="width: 100%; text-align: center; margin: 0;">เปิดทุกวัน ตั้งแต่เวลา 11:00-18:00 นาฬิกา</p1>
  <div class="content" style="display: flex; justify-content: center;">
   <div class="product" style="
       max-width: 1000px;
