--- a/index.html
+++ b/index.html
@@ -193,13 +193,17 @@
     <p style="width: 100%; margin-top: 10px;">✨แวะมาช้อปกันได้ที่ร้าน CHANGPONG TRIBE ร้านเสื้อผ้ามือสองสไตล์ญี่ปุ่น คัดพิเศษทุกชิ้น ส่งตรงจากญี่ปุ่น ราคาน่ารัก เพราะลดราคาทุกวัน สูงสุดถึง 90% คุณภาพดี ใส่แล้วไม่ซ้ำใครแน่นอน!</p>
  <h2 style="width: 100%; margin-top: 20px;">โปรเด็ด โปรดัง ที่ใครก็พลาด</h2>
     <p style="width: 100%; margin-top: 10px;">เปิดของใหม่ทุกวันเสาร์</p> <a href="cp1j.html" >ข้อมูลเพิ่มเติม</a>
-    
-      <p style="width: 100%; margin-top: 10px;">โปรโมชั่น ถุงละ 100 บาท ทุกวันจันทร์</p><a href="cp2j.html" target="_blank">ข้อมูลเพิ่มเติม</a>
+     <p style="width: 100%; margin-top: 10px;">โปรโมชั่น ถุงละ 100 บาท ทุกวันจันทร์</p><a href="cp2j.html" target="_blank">ข้อมูลเพิ่มเติม</a>
     <p style="width: 100%; margin-top: 10px;">
-      <p style="width: 100%; margin-top: 10px;">โปรโมชั่น ถุงละ 100 บาท ทุกวันจันทร์</p>
-      <a href=cp2j.html>รายละเอียดเพิ่มเติม</a>
     </p>
-    <p style="width: 100%; margin-top: 10px;"></p>
+
+    <p style="width: 100%; margin-top: 10px;">
+      <a href=>โปรโมชั่น ถุงละ 100 บาท ทุกวันจันทร์</a>
+      รายละเอียดเพิ่มเติม
+      <a href="cp2j.html">คลิก</a>
+    </p>
+  </div>
+   
     <p style="width: 100%; margin-top: 10px;">
       <a href="https://line.me/ti/g2/KvMNGbHvjO0N7Fq12dhLzGDEOXxEdcgCnU1ykQ" target="_blank">เข้ากลุ่มเพื่อรับโปรโมชั่น</a>
       หรือ
