--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
     </p>
 
     <p style="width: 100%; margin-top: 10px;">
-      <a href=>โปรโมชั่น ถุงละ 100 บาท ทุกวันจันทร์</a>
+      <h2 style="width: 100%; margin-top: 20px;">โปรโมชั่น ถุงละ 100 บาท ทุกวันจันทร์</h>
       รายละเอียดเพิ่มเติม
       <a href="cp2j.html">คลิก</a>
     </p>
-  </div>
+  
    
     <p style="width: 100%; margin-top: 10px;">
       <a href="https://line.me/ti/g2/KvMNGbHvjO0N7Fq12dhLzGDEOXxEdcgCnU1ykQ" target="_blank">เข้ากลุ่มเพื่อรับโปรโมชั่น</a>
