--- a/index.html
+++ b/index.html
@@ -191,17 +191,17 @@
  
     <h2 style="width: 100%; margin-top: 20px;">เสื้อผ้าญี่ปุ่นมือ2</h2>
     <p style="width: 100%; margin-top: 10px;">✨แวะมาช้อปกันได้ที่ร้าน CHANGPONG TRIBE ร้านเสื้อผ้ามือสองสไตล์ญี่ปุ่น คัดพิเศษทุกชิ้น ส่งตรงจากญี่ปุ่น ราคาน่ารัก เพราะลดราคาทุกวัน สูงสุดถึง 90% คุณภาพดี ใส่แล้วไม่ซ้ำใครแน่นอน!</p>
- <h2 style="width: 100%; margin-top: 20px;">โปรเด็ด โปรดัง ที่ใครก็พลาด</h2>
+ <h2 style="width: 100%; margin-top: 20px;">🤩โปรเด็ด โปรดัง ที่ใครก็พลาด🤩</h2>
    
       <p style="width: 100%; margin-top: 10px;">
       <h2 style="width: 100%; margin-top: 20px;">เปิดของใหม่ทุกวันเสาร์</h>
-      รายละเอียดเพิ่มเติม
+      รายละเอียดเพิ่มเติม▶️
       <a href="cp1j.html">คลิก</a>
     </p>
 
     <p style="width: 100%; margin-top: 10px;">
       <h2 style="width: 100%; margin-top: 20px;">โปรโมชั่น ถุงละ 100 บาท ทุกวันจันทร์</h>
-      รายละเอียดเพิ่มเติม
+      รายละเอียดเพิ่มเติม▶️
       <a href="cp2j.html">คลิก</a>
     </p>
   
